--- a/Samples/CameraCaptureUI/CameraCaptureUI.Android/CameraCaptureUI.Android.csproj
+++ b/Samples/CameraCaptureUI/CameraCaptureUI.Android/CameraCaptureUI.Android.csproj
@@ -93,6 +93,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
+    <PackageReference Include="XPlat.Media.Capture">
+      <Version>1.4.18299.4</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
