Updated Android CameraCaptureUI sample

--- a/Samples/CameraCaptureUI/CameraCaptureUI.Android/CameraCaptureUI.Android.csproj
+++ b/Samples/CameraCaptureUI/CameraCaptureUI.Android/CameraCaptureUI.Android.csproj
@@ -97,6 +97,11 @@
       <Version>1.5.19024.1</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\filepaths.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
