--- a/Samples/CameraCaptureUI/CameraCaptureUI.Android/Properties/AndroidManifest.xml
+++ b/Samples/CameraCaptureUI/CameraCaptureUI.Android/Properties/AndroidManifest.xml
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-          android:versionCode="1" 
-          android:versionName="1.0" 
-          package="CameraCaptureUI.Android.CameraCaptureUI.Android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.xplat.cameracaptureui" android:installLocation="auto">
   <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="27" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.FLASHLIGHT" />
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.DELETE_CACHE_FILES" />
+  <uses-permission android:name="android.permission.RECORD_AUDIO" />
   <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
+    <provider android:name="android.support.v4.content.FileProvider" android:authorities="com.xplat.cameracaptureui" android:exported="false" android:grantUriPermissions="true" >
+      <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/filepaths" />
+    </provider>
   </application>
 </manifest>
